# os-crud-cpp

./: AppPaths.h  CMakeLists.txt  FileInfo.h  FileManager.cpp  FileManager.h  Logger.h  PlatformOps.h  README.md  main.cpp
src/: Confirmation.h  FileInfo.h  FileManager.cpp  Glob.h  Logger.cpp  PlatformOps.cpp  Result.h  main.cpp
